# TRT-CUDA

./: CMakeLists.txt  docker-things.txt  git-things  orin_dla_CMakeLists.txt  orin_dla_base_sample.cpp  ptx-using-things  ros-things.txt  something.txt  think-in-trans  think-in-trans.md  torch-pybind-cmake-reference.txt  torch.txt
cfg_file/: dla_test.json  example_cfg.json  occ_backbone.json
engine/include/: base_eng.h  torch_eng.h  trt_eng.h
engine/src/: base_eng.cc  torch_eng.cc  trt_eng.cc
exec_app/: test_dla_sample.cpp  trt_dla_test.cpp  trt_test.cpp
include/: common.h  mem_buffer.h  nvsci_buffer.h  nvsci_synchronize.h
module/include/: base_module.h  kornia_perspective_module.h
module/src/: base_module.cc  kornia_perspective_module.cc  kornia_perspective_module.cu
src/: common.cc  mem_buffer.cc  nvsci_buffer.cc  nvsci_synchronize.cc
trt_plugins/: test_plugin.cpp
trt_plugins/axesNormalizationPlugin/: axesNormalizationKernel.cu  axesNormalizationPlugin.cpp  axesNormalizationPlugin.h
trt_plugins/castLayerPlugin/: castLayerKernel.cu  castLayerPlugin.cpp  castLayerPlugin.h
trt_plugins/layerNormPlugin/: layerNormPlugin.cpp  layerNormPlugin.h
